<?xml version="1.0"?>
<package format="2">
  <name>patchwork_cuda</name>
  <version>0.0.0</version>
  <description>patchwork_cuda package</description>

  <maintainer email="orcun.c.deniz@gmail.com">Orcun Deniz</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libpcl-all-dev</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>libpcl-all</exec_depend>

</package>
